Fix UAT bugs for do not save shift info when select shifts and enter times

--- a/src/containers/WorkflowManagement/DepartmentManagement/modals/ShiftUpdateModal.scss
+++ b/src/containers/WorkflowManagement/DepartmentManagement/modals/ShiftUpdateModal.scss
@@ -122,6 +122,9 @@
                     .timesheet-box {
                         .member-list {
                             width: 100%;
+                            position: relative;
+                            z-index: initial;
+                            top: initial;
                         }
                     }
                 }
